# carbon-aware-ev-charging

./: .gitignore  .releaserc.json  AGENTS.md  PLAN-dashboard.md  PLAN.md  README.md  REFACTOR.md  TODO.md  ev_dashboard.yaml  hacs.json  main.py  prek.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml  validate.yaml
custom_components/carbon_aware_ev_charging/: __init__.py  base_entity.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json  number.py  select.py  sensor.py  strings.json  switch.py
custom_components/carbon_aware_ev_charging/translations/: en.json
tests/: __init__.py  conftest.py  test_config_flow.py  test_coordinator.py  test_coordinator_integration.py  test_diagnostics.py  test_entities.py  test_init.py  test_roadtrip.py
